force-app/main/default/objects/bofc__Manage_Org_Info_MDT__mdt/bofc__Manage_Org_Info_MDT__mdt.object-meta.xml
<CustomObject>
    <label>Manage Org Info_MDT</label>
    <pluralLabel>Manage Org Infos MDT</pluralLabel>
</CustomObject>