force-app/main/default/objects/bofc__Manage_Org_Info_MDT__mdt/fields/bofc__Org_P__c.field-meta.xml
<CustomField>
    <fullName>bofc__Org_P__c</fullName>
    <label>Org P</label>
    <length>255</length>
    <type>Text</type>
</CustomField>