force-app/main/default/objects/bofc__Manage_Org_Info_MDT__mdt/fields/bofc__Org_U__c.field-meta.xml
<CustomField>
    <fullName>bofc__Org_U__c</fullName>
    <label>Org U</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>